[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Objects/SceneTransitionTrigger/SceneTransitionTrigger.gd" type="Script" id=1]
[ext_resource path="res://Assets/Resources/Audio/sfxia/exports/level_start.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="SceneTransitionTrigger" type="Area2D"]
collision_layer = 32768
collision_mask = 32768
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SmoothingTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_SceneTransitionTrigger_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SmoothingTimer" to="." method="_on_SmoothingTimer_timeout"]
